# llm-tabular-synth-eval

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: method_notes_zh.md  server_setup_zh.md
examples/: run_default_credit_demo.py
scripts/: download_datasets.py  run_paired_model_experiment.py  run_real_scale_experiment.py
src/tabular_synth/: __init__.py  constraints.py  data.py  epic.py  great.py  llm_backends.py  metrics.py
tests/: test_core.py
